icon margin top

--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.scss
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.scss
@@ -164,6 +164,7 @@
             }
             .sidebar-tooltip {
               top: 0;
+              margin-top: -10px;
               width: 300px;
               .tooltip-inner {
                 max-width: 300px;
