--- a/front-end/src/app/forms/transactions/transactions.component.scss
+++ b/front-end/src/app/forms/transactions/transactions.component.scss
@@ -68,6 +68,11 @@
       color: $white;
     }
 
+    .transactions__btn-search-filter-join {
+      float: left;
+      padding: 10px 2px 0 2px;
+    }
+
     .transactions__trx-btn {
       margin: 5px;
       width: 10em;
