Getting individual receipt working

--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
@@ -20,6 +20,30 @@
             text-decoration: none;
           }
         }
+        .dropdown-toggle {
+          &:after {
+            display:none;
+          }
+        }
+        .dropdown-menu {
+          &.show {
+            left: -80px !important;
+            .dropdown-item {
+              &:focus,
+              &:hover,
+              &:active,
+              &:visited {
+                background-color: $white;
+                color: $black;
+                cursor: pointer;
+                outline: none;
+              }
+              &:hover {
+                text-decoration: underline;
+              }
+            }
+          }
+        }
         @include clearfix();
       }
     }
