--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -33,98 +33,6 @@
       <hr />
     </header>
     <section>
-      <div class="row">
-        <div class="col">
-          <label for="transactionCategory">
-            Transaction Category *
-             <button
-                type="button"
-                class="btn btn-info"
-                ngbTooltip="Waiting for text."
-                tooltipClass="form-tooltip"
-              >
-                <i class="info-icon" aria-hidden="true"></i>
-                <span class="sr-only">Click here for more information</span>
-              </button>
-          </label>
-          <ng-select
-            name="transactionCategory"
-            class="transaction-category-select"
-            placeholder="Select a transaction category first."
-            [items]="transactionCategories"
-            bindLabel="text"
-            bindValue="value"
-            groupBy="type"
-            (change)="transactionCategorySelected($event)"
-            formControlName="transactionCategory"
-          >
-            <ng-template ng-optgroup-tmp let-item="item">
-              {{item.type || 'Unnamed group'}}
-            </ng-template>
-          </ng-select>
-          <div
-            class="error-text"
-            *ngIf="(frmIndividualReceipt.controls.transactionCategory.invalid && (frmIndividualReceipt.controls.transactionCategory.dirty || frmIndividualReceipt.controls.transactionCategory.touched)) || formSubmitted"
-          >
-            <div
-              class="text-error text-left"
-              *ngIf="frmIndividualReceipt.controls.transactionCategory.errors?.required"
-            >
-              You must select a transaction category.
-            </div>
-          </div>
-        </div>
-        <div class="col info-text">
-          {{ transactionCategoryInfo }}
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <label for="transactionType">
-            Transaction Type *
-             <button
-                type="button"
-                class="btn btn-info"
-                ngbTooltip="Waiting for text."
-                tooltipClass="form-tooltip"
-              >
-                <i class="info-icon" aria-hidden="true"></i>
-                <span class="sr-only">Click here for more information</span>
-              </button>
-          </label>
-          <ng-select
-            name="transactionType"
-            class="transaction-type-select"
-            [placeholder]="frmIndividualReceipt.controls.transactionCategory.invalid ? 'You must select a transaction category first.' : 'Select a transaction type.'"
-            [items]="transactionTypes"
-            bindLabel="text"
-            bindValue="value"
-            formControlName="transactionType"
-            (change)="transactionTypeSelected($event)"
-          >
-          </ng-select>
-          <div
-            class="error-text"
-            *ngIf="(frmIndividualReceipt.controls.transactionType.invalid && (frmIndividualReceipt.controls.transactionType.dirty || frmIndividualReceipt.controls.transactionType.touched)) || formSubmitted"
-          >
-            <div
-              class="text-error text-left"
-              *ngIf="frmIndividualReceipt.controls.transactionCategory.errors?.required  && frmIndividualReceipt.controls.transactionType.errors?.required"
-            >
-              You must select a transaction category first.
-            </div>
-            <div
-              class="text-error text-left"
-              *ngIf="frmIndividualReceipt.controls.transactionCategory.valid && frmIndividualReceipt.controls.transactionType.errors?.required"
-            >
-              You must select a transaction type.
-            </div>
-          </div>
-        </div>
-        <div class="col info-text">
-          {{ transactionTypeInfo }}
-        </div>
-      </div>
       <ng-container *ngFor="let row of formFields">
         <div class="row">
           <ng-container *ngIf="isArray(row.cols)">
@@ -199,6 +107,13 @@
         <div class="grid-row">
           <div class="grid-row__col grid-row__col--12">
               <div class="forms__btn-container">
+                <button
+                  class="btn btn-previous btn-left"
+                  type="button"
+                  (click)="previousStep()"
+                >
+                  Previous
+                </button>
                 <button
                   class="btn btn-secondary btn-right"
                   type="submit"
