Adding individual receipt fields.

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -33,8 +33,8 @@
       <hr />
     </header>
     <section>
-      <ng-container *ngFor="let row of formFields">
-        <div class="row">
+      <ng-container *ngFor="let row of formFields; trackBy: removeFields">
+        <div class="row" *ngIf="!row.skipRow">
           <ng-container *ngIf="isArray(row.cols)">
             <div class="col" *ngFor="let col of row.cols">
               <div class="form-group">
@@ -63,17 +63,6 @@
                     class="form-control"
                     [formControlName]="col.name"
                   />
-                  <div
-                    class="error-text"
-                    *ngIf="frmIndividualReceipt.get(col.name).invalid && frmIndividualReceipt.get(col.name).dirty || frmIndividualReceipt.get(col.name).touched || frmIndividualReceipt.get(col.name).blur || formSubmitted"
-                  >
-                    <div
-                      class="text-error text-left"
-                      *ngIf="frmIndividualReceipt.get(col.name).errors?.required"
-                    >
-                      {{ col.text }} is required.
-                    </div>
-                  </div>
                 </ng-container>
                 <ng-container *ngIf="col.type === 'textarea'">
                   <textarea
@@ -83,7 +72,7 @@
                     [formControlName]="col.name"
                   ></textarea>
                 </ng-container>
-                <ng-container *ngIf="col.type === 'select' && col.name === 'contributorState'">
+                <ng-container *ngIf="col.type === 'select' && col.name === 'ContributorState'">
                   <ng-select
                     class="state-select"
                     [formControlName]="col.name"
