--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -10,7 +10,7 @@
         >
       </report-type-sidebar>
     </div>
-    <div *ngIf="step==='step_2'">
+    <div *ngIf="step==='step_2' || step==='step_3'">
       <transaction-sidebar
         title="Transaction Categories"
         [transactionCategories]="transactionCategories"
